# vala-roots

./: README.md  meson.build
src/: main.c  main.vala  meson.build  utils.vala
vapi/: wayland-server.vapi  wlroots-0.18.vapi
